Arreglos en el codigo 1

--- a/src/views/beneficiaries.ejs
+++ b/src/views/beneficiaries.ejs
@@ -172,6 +172,7 @@ $(document).ready(function(){
                                                 id="obser_deshabilitar_beneficiario" 
                                                 placeholder="Observaciones de Deshabilitar *" 
                                                 class="form-control"
+                                                oninput="let p=this.selectionStart;this.value=this.value.toUpperCase();this.setSelectionRange(p, p);"
                                             ></textarea>
                                         </div>
                                     </div>
