--- a/src/views/collectives.ejs
+++ b/src/views/collectives.ejs
@@ -182,6 +182,7 @@ $(document).ready(function(){
                                                 id="obser_deshabilitar_colectivo" 
                                                 placeholder="Observaciones de Deshabilitar *" 
                                                 class="form-control"
+                                                oninput="let p=this.selectionStart;this.value=this.value.toUpperCase();this.setSelectionRange(p, p);"
                                             ></textarea>
                                         </div>
                                     </div>
