--- a/src/views/editInsurer.ejs
+++ b/src/views/editInsurer.ejs
@@ -35,6 +35,7 @@
                                                 id="rif_aseguradora"
                                                 value="<%= insurer.rif_aseguradora %>"
                                                 class="form-control"
+                                                oninput="let p=this.selectionStart;this.value=this.value.toUpperCase();this.setSelectionRange(p, p);"
                                                 required
                                             >
                                         </div>
@@ -48,6 +49,7 @@
                                                 id="nombre_aseguradora" 
                                                 value="<%= insurer.nombre_aseguradora %>"
                                                 class="form-control"
+                                                oninput="let p=this.selectionStart;this.value=this.value.toUpperCase();this.setSelectionRange(p, p);"
                                                 required
                                             >
                                         </div>
@@ -77,7 +79,8 @@
                                                 name="direccion_aseguradora"
                                                 id="direccion_aseguradora"
                                                 value="<%= insurer.direccion_aseguradora %>"
-                                                class="form-control" 
+                                                class="form-control"
+                                                oninput="let p=this.selectionStart;this.value=this.value.toUpperCase();this.setSelectionRange(p, p);" 
                                                 required
                                             >
                                         </div>
