--- a/src/views/editOwnAgent.ejs
+++ b/src/views/editOwnAgent.ejs
@@ -35,7 +35,7 @@
                                                     name="cedula_agente_propio"
                                                     id="cedula_agente_propio"
                                                     value="<%= ownAgent.cedula_agente_propio %>"
-                                                    class="form-control"
+                                                    class="form-control number_format"
                                                     required
                                                 >
                                             </div>
@@ -49,6 +49,7 @@
                                                     id="rif_agente_propio"
                                                     value="<%= ownAgent.rif_agente_propio %>"
                                                     class="form-control"
+                                                    oninput="let p=this.selectionStart;this.value=this.value.toUpperCase();this.setSelectionRange(p, p);"
                                                     required
                                                 >
                                             </div>
@@ -63,6 +64,7 @@
                                                 id="nombre_agente_propio" 
                                                 value="<%= ownAgent.nombre_agente_propio %>"
                                                 class="form-control"
+                                                oninput="let p=this.selectionStart;this.value=this.value.toUpperCase();this.setSelectionRange(p, p);"
                                                 required
                                             >
                                         </div>
@@ -76,6 +78,7 @@
                                                 id="apellido_agente_propio" 
                                                 value="<%= ownAgent.apellido_agente_propio %>"
                                                 class="form-control"
+                                                oninput="let p=this.selectionStart;this.value=this.value.toUpperCase();this.setSelectionRange(p, p);"
                                                 required
                                             >
                                         </div>
@@ -84,12 +87,11 @@
                                     <div class="form-group row"><label class="col-sm-2 col-form-label">Comisión</label>
                                         <div class="col-sm-10">
                                             <input 
-                                                type="number"
-                                                step="0.01"
+                                                type="text"
                                                 name="porcentaje_agente_propio"
                                                 id="porcentaje_agente_propio" 
-                                                value="<%= ownAgent.porcentaje_agente_propio %>" 
-                                                class="form-control"
+                                                value="<%= porcentajeAgentePropio %>" 
+                                                class="form-control number_format"
                                                 required
                                             >
                                         </div>
@@ -133,6 +135,7 @@
                                                 name="direccion_agente_propio"
                                                 id="direccion_agente_propio" 
                                                 class="form-control"
+                                                oninput="let p=this.selectionStart;this.value=this.value.toUpperCase();this.setSelectionRange(p, p);"
                                                 required
                                             ><%= ownAgent.direccion_agente_propio %></textarea>
                                         </div>
