--- a/src/views/executiveForm.ejs
+++ b/src/views/executiveForm.ejs
@@ -27,14 +27,14 @@
                         <div class="col-lg-6">
                             <div class="ibox">
                                 <div class="form-control">
-                                    <div class="form-group row"><label class="col-sm-3 col-form-label">Cédula/Rif</label>
+                                    <div class="form-group row"><label class="col-sm-3 col-form-label">Cédula</label>
                                         <div class="col-sm-9">
                                             <input 
                                                 type="text"
-                                                name="id_rif_ejecutivo"
-                                                id="id_rif_ejecutivo"
-                                                placeholder="Cédula/Rif *" 
-                                                class="form-control"
+                                                name="cedula_ejecutivo"
+                                                id="cedula_ejecutivo"
+                                                placeholder="Cédula *" 
+                                                class="form-control number_format"
                                                 required
                                             >
                                         </div>
@@ -48,6 +48,7 @@
                                                 id="nombre_ejecutivo" 
                                                 placeholder="Nombre de Ejecutivo *" 
                                                 class="form-control"
+                                                oninput="let p=this.selectionStart;this.value=this.value.toUpperCase();this.setSelectionRange(p, p);"
                                                 required
                                             >
                                         </div>
@@ -61,6 +62,7 @@
                                                 id="apellido_ejecutivo" 
                                                 placeholder="Apellido de Ejecutivo *" 
                                                 class="form-control"
+                                                oninput="let p=this.selectionStart;this.value=this.value.toUpperCase();this.setSelectionRange(p, p);"
                                                 required
                                             >
                                         </div>
@@ -69,10 +71,10 @@
                                     <div class="form-group">
                                         <div class="form-group row"><label class="col-sm-3 col-form-label">Tipo de ejecutivo</label>
                                             <div class="col-sm-9">
-                                                <select class="form-control" name="tipo_ejecutivo">
-                                                    <option selected value="">Seleccione *</option>
-                                                        <option value="Suscripción">Suscripción</option>
-                                                        <option value="Siniestros">Siniestros</option>
+                                                <select class="form-control" name="tipo_ejecutivo" required>
+                                                    <option value="">Seleccione *</option>
+                                                    <option value="SUSCRIPCIÓN">SUSCRIPCIÓN</option>
+                                                    <option value="SINIESTROS">SINIESTROS</option>
                                                 </select>
                                             </div>
                                         </div>
@@ -117,6 +119,7 @@
                                                 id="direccion_ejecutivo" 
                                                 placeholder="Dirección de Ejecutivo *" 
                                                 class="form-control"
+                                                oninput="let p=this.selectionStart;this.value=this.value.toUpperCase();this.setSelectionRange(p, p);"
                                                 required
                                             ></textarea>
                                         </div>
