--- a/src/views/layouts/footer.ejs
+++ b/src/views/layouts/footer.ejs
@@ -91,6 +91,19 @@
             $('.active-input-2').show();
         });
     </script>
+
+    <script>
+        var separador = document.getElementsByClassName('number_format');
+        for (var i = 0 ; i < separador.length; i++) {
+            separador[i].addEventListener('input', (e) => {
+                var entrada = e.target.value.split(','),
+                parteEntera = entrada[0].replace(/\./g, ''),
+                parteDecimal = entrada[1],
+                salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
+                e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : '');
+            }, false); 
+        }
+    </script>
     
 </body>
 
