--- a/src/views/layouts/footerCollectiveWizardForm.ejs
+++ b/src/views/layouts/footerCollectiveWizardForm.ejs
@@ -108,6 +108,54 @@
                 $('#verification-form').submit();
             }
         });
+        $("#policy-form").on('keyup','.number_format',function(){
+            var separador = $(this);
+            for (var i = 0 ; i < separador.length; i++) {
+                separador[i].addEventListener('input', (e) => {
+                    var entrada = e.target.value.split(','),
+                    parteEntera = entrada[0].replace(/\./g, ''),
+                    parteDecimal = entrada[1],
+                    salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
+                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : '');
+                }, false); 
+            }    
+        });
+        $("#extra-form").on('keyup','.number_format',function(){
+            var separador = $(this);
+            for (var i = 0 ; i < separador.length; i++) {
+                separador[i].addEventListener('input', (e) => {
+                    var entrada = e.target.value.split(','),
+                    parteEntera = entrada[0].replace(/\./g, ''),
+                    parteDecimal = entrada[1],
+                    salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
+                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : '');
+                }, false); 
+            }    
+        });
+        $("#receipt-form").on('keyup','.number_format',function(){
+            var separador = $(this);
+            for (var i = 0 ; i < separador.length; i++) {
+                separador[i].addEventListener('input', (e) => {
+                    var entrada = e.target.value.split(','),
+                    parteEntera = entrada[0].replace(/\./g, ''),
+                    parteDecimal = entrada[1],
+                    salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
+                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : '');
+                }, false); 
+            }    
+        });
+        $("#commission-form").on('keyup','.number_format',function(){
+            var separador = $(this);
+            for (var i = 0 ; i < separador.length; i++) {
+                separador[i].addEventListener('input', (e) => {
+                    var entrada = e.target.value.split(','),
+                    parteEntera = entrada[0].replace(/\./g, ''),
+                    parteDecimal = entrada[1],
+                    salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
+                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : '');
+                }, false); 
+            }    
+        });
     });
 </script>
 
@@ -307,9 +355,9 @@
 <script>
     function showInput() {
         var getSelectValue = document.getElementById("maternidad_colectivo").value;
-        if (getSelectValue === 'Sí') {
+        if (getSelectValue === 'SÍ') {
             document.getElementById("searchinput").style.display = "block";
-        } else if (getSelectValue === 'No') {
+        } else if (getSelectValue === 'NO') {
             document.getElementById("searchinput").style.display = "none";
         }
     }   
@@ -318,9 +366,9 @@
 <script>
     function showInput2() {
         var getSelectValue = document.getElementById("plazo_espera_colectivo").value;
-        if (getSelectValue === 'Sí') {
+        if (getSelectValue === 'SÍ') {
             document.getElementById("searchinput2").style.display = "block";
-        } else if (getSelectValue === 'No') {
+        } else if (getSelectValue === 'NO') {
             document.getElementById("searchinput2").style.display = "none";
         }
     }   
@@ -332,17 +380,17 @@
         function premiumCalculation() {
             var getSelectValue = document.getElementById("tipo_fraccionamiento_recibo").value;
             var checkboxDivision = document.getElementById("fraccionamiento_boolean_recibo").checked;
-            if (getSelectValue === 'Mensual') {
+            if (getSelectValue === 'MENSUAL') {
                 var premiumMonthly = collective.prima_anual_colectivo / 12;
                 premiumMonthly = premiumMonthly.toFixed(2);
                 document.getElementById("monto_prima_recibo").value = premiumMonthly;
                 document.getElementById("numero_pago_recibo").value = 12;
-            } else if (getSelectValue === 'Trimestral') {
+            } else if (getSelectValue === 'TRIMESTRAL') {
                 var premiumQuarterly = collective.prima_anual_colectivo / 4;
                 premiumQuarterly = premiumQuarterly.toFixed(2);
                 document.getElementById("monto_prima_recibo").value = premiumQuarterly;
                 document.getElementById("numero_pago_recibo").value = 4;
-            } else if (getSelectValue === 'Semestral') {
+            } else if (getSelectValue === 'SEMESTRAL') {
                 var premiumBiannual = collective.prima_anual_colectivo / 2;
                 premiumBiannual = premiumBiannual.toFixed(2);
                 document.getElementById("monto_prima_recibo").value = premiumBiannual;
