--- a/src/views/layouts/footerWizardForm.ejs
+++ b/src/views/layouts/footerWizardForm.ejs
@@ -104,6 +104,42 @@
                 $('#verification-form').submit();
             }
         });
+        $("#policy-form").on('keyup','.number_format',function(){
+            var separador = $(this);
+            for (var i = 0 ; i < separador.length; i++) {
+                separador[i].addEventListener('input', (e) => {
+                    var entrada = e.target.value.split(','),
+                    parteEntera = entrada[0].replace(/\./g, ''),
+                    parteDecimal = entrada[1],
+                    salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
+                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : '');
+                }, false); 
+            }    
+        });
+        $("#receipt-form").on('keyup','.number_format',function(){
+            var separador = $(this);
+            for (var i = 0 ; i < separador.length; i++) {
+                separador[i].addEventListener('input', (e) => {
+                    var entrada = e.target.value.split(','),
+                    parteEntera = entrada[0].replace(/\./g, ''),
+                    parteDecimal = entrada[1],
+                    salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
+                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : '');
+                }, false); 
+            }    
+        });
+        $("#commission-form").on('keyup','.number_format',function(){
+            var separador = $(this);
+            for (var i = 0 ; i < separador.length; i++) {
+                separador[i].addEventListener('input', (e) => {
+                    var entrada = e.target.value.split(','),
+                    parteEntera = entrada[0].replace(/\./g, ''),
+                    parteDecimal = entrada[1],
+                    salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
+                    e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : '');
+                }, false); 
+            }    
+        });
     });
 </script>
 
@@ -281,17 +317,17 @@
         function premiumCalculation() {
             var getSelectValue = document.getElementById("tipo_fraccionamiento_recibo").value;
             var checkboxDivision = document.getElementById("fraccionamiento_boolean_recibo").checked;
-            if (getSelectValue === 'Mensual') {
+            if (getSelectValue === 'MENSUAL') {
                 var premiumMonthly = policy.prima_anual_poliza / 12;
                 premiumMonthly = premiumMonthly.toFixed(2);
                 document.getElementById("monto_prima_recibo").value = premiumMonthly;
                 document.getElementById("numero_pago_recibo").value = 12;
-            } else if (getSelectValue === 'Trimestral') {
+            } else if (getSelectValue === 'TRIMESTRAL') {
                 var premiumQuarterly = policy.prima_anual_poliza / 4;
                 premiumQuarterly = premiumQuarterly.toFixed(2);
                 document.getElementById("monto_prima_recibo").value = premiumQuarterly;
                 document.getElementById("numero_pago_recibo").value = 4;
-            } else if (getSelectValue === 'Semestral') {
+            } else if (getSelectValue === 'SEMESTRAL') {
                 var premiumBiannual = policy.prima_anual_poliza / 2;
                 premiumBiannual = premiumBiannual.toFixed(2);
                 document.getElementById("monto_prima_recibo").value = premiumBiannual;
