--- a/src/views/legalInsureds.ejs
+++ b/src/views/legalInsureds.ejs
@@ -163,6 +163,7 @@ $(document).ready(function(){
                                                 id="obser_deshabilitar_per_jur" 
                                                 placeholder="Observaciones de Deshabilitar *" 
                                                 class="form-control"
+                                                oninput="let p=this.selectionStart;this.value=this.value.toUpperCase();this.setSelectionRange(p, p);"
                                             ></textarea>
                                         </div>
                                     </div>
