--- a/src/views/naturalInsuredForm.ejs
+++ b/src/views/naturalInsuredForm.ejs
@@ -48,6 +48,7 @@
                                                 id="nombre_asegurado_per_nat" 
                                                 placeholder="Nombre *" 
                                                 class="form-control"
+                                                oninput="let p=this.selectionStart;this.value=this.value.toUpperCase();this.setSelectionRange(p, p);"
                                                 required
                                             >
                                         </div>
@@ -61,6 +62,7 @@
                                                 id="apellido_asegurado_per_nat" 
                                                 placeholder="Apellido *" 
                                                 class="form-control"
+                                                oninput="let p=this.selectionStart;this.value=this.value.toUpperCase();this.setSelectionRange(p, p);"
                                                 required
                                             >
                                         </div>
@@ -119,6 +121,7 @@
                                                 id="nombre_emergencia_per_nat" 
                                                 placeholder="Nombre de Contacto de Emergencia *" 
                                                 class="form-control"
+                                                oninput="let p=this.selectionStart;this.value=this.value.toUpperCase();this.setSelectionRange(p, p);"
                                                 required
                                             >
                                         </div>
@@ -139,8 +142,8 @@
                                     <div class="hr-line-dashed"></div>
                                     <div class="form-group row"><label class="col-sm-2 col-form-label">Agente</label>
                                         <div class="col-sm-10">
-                                            <select class="form-control" name="nombre_com_agente_propio">
-                                                <option selected value="">Seleccione *</option>
+                                            <select class="form-control" name="nombre_com_agente_propio" required>
+                                                <option value="">Seleccione *</option>
                                                 <% ownAgents.forEach((ownAgent) => { %>
                                                     <option value="<%= ownAgent.nombre_agente_propio %> <%= ownAgent.apellido_agente_propio %>"><%= ownAgent.nombre_agente_propio %> <%= ownAgent.apellido_agente_propio %></option>
                                                 <% }); %>
@@ -155,6 +158,7 @@
                                                 id="direccion_asegurado_per_nat" 
                                                 placeholder="Dirección *" 
                                                 class="form-control"
+                                                oninput="let p=this.selectionStart;this.value=this.value.toUpperCase();this.setSelectionRange(p, p);"
                                                 required
                                             ></textarea>
                                         </div>
