--- a/src/views/ownAgentForm.ejs
+++ b/src/views/ownAgentForm.ejs
@@ -35,6 +35,7 @@
                                                 id="id_rif_agente_propio"
                                                 placeholder="Cédula/Rif *" 
                                                 class="form-control"
+                                                oninput="let p=this.selectionStart;this.value=this.value.toUpperCase();this.setSelectionRange(p, p);"
                                                 required
                                             >
                                         </div>
@@ -48,6 +49,7 @@
                                                 id="nombre_agente_propio" 
                                                 placeholder="Nombre de Agente Propio *" 
                                                 class="form-control"
+                                                oninput="let p=this.selectionStart;this.value=this.value.toUpperCase();this.setSelectionRange(p, p);"
                                                 required
                                             >
                                         </div>
@@ -61,6 +63,7 @@
                                                 id="apellido_agente_propio" 
                                                 placeholder="Apellido de Agente Propio *" 
                                                 class="form-control"
+                                                oninput="let p=this.selectionStart;this.value=this.value.toUpperCase();this.setSelectionRange(p, p);"
                                                 required
                                             >
                                         </div>
@@ -69,12 +72,11 @@
                                     <div class="form-group row"><label class="col-sm-2 col-form-label">Comisión</label>
                                         <div class="col-sm-10">
                                             <input 
-                                                type="number"
-                                                step="0.01"
+                                                type="text"
                                                 name="porcentaje_agente_propio"
                                                 id="porcentaje_agente_propio" 
                                                 placeholder="Comisión de Agente Propio *" 
-                                                class="form-control"
+                                                class="form-control number_format"
                                                 required
                                             >
                                         </div>
@@ -91,7 +93,7 @@
                                                 type="tel"
                                                 name="celular_agente_propio"
                                                 id="celular_agente_propio" 
-                                                placeholder="Celular de Agente Propio*" 
+                                                placeholder="Celular de Agente Propio *" 
                                                 class="form-control"
                                                 required
                                             >
@@ -119,6 +121,7 @@
                                                 id="direccion_agente_propio" 
                                                 placeholder="Dirección de Agente Propio *" 
                                                 class="form-control"
+                                                oninput="let p=this.selectionStart;this.value=this.value.toUpperCase();this.setSelectionRange(p, p);"
                                                 required
                                             ></textarea>
                                         </div>
