--- a/src/views/userForm.ejs
+++ b/src/views/userForm.ejs
@@ -35,6 +35,7 @@
                                                 id="id_rif"
                                                 placeholder="Cédula/Rif *" 
                                                 class="form-control"
+                                                oninput="let p=this.selectionStart;this.value=this.value.toUpperCase();this.setSelectionRange(p, p);"
                                                 required
                                             >
                                         </div>
@@ -48,6 +49,7 @@
                                                 id="username" 
                                                 placeholder="Usuario" 
                                                 class="form-control"
+                                                oninput="let p=this.selectionStart;this.value=this.value.toUpperCase();this.setSelectionRange(p, p);"
                                             >
                                         </div>
                                     </div>
@@ -86,7 +88,8 @@
                                                 name="direccion_usuario"
                                                 id="direccion_usuario"
                                                 placeholder="Dirección Fiscal"
-                                                class="form-control" 
+                                                class="form-control"
+                                                oninput="let p=this.selectionStart;this.value=this.value.toUpperCase();this.setSelectionRange(p, p);" 
                                             >
                                         </div>
                                     </div>
@@ -104,6 +107,7 @@
                                                 id="nombre_usuario"
                                                 placeholder="Nombre y Apellido *" 
                                                 class="form-control"
+                                                oninput="let p=this.selectionStart;this.value=this.value.toUpperCase();this.setSelectionRange(p, p);"
                                                 required
                                             >
                                         </div>
@@ -111,8 +115,8 @@
                                     <div class="hr-line-dashed"></div>
                                     <div class="form-group row"><label class="col-sm-2 col-form-label">Rol</label>
                                         <div class="col-sm-10">
-                                            <select class="form-control" name="rol">
-                                                <option selected value="0">Seleccione *</option>
+                                            <select class="form-control" name="rol" required>
+                                                <option value="">Seleccione *</option>
                                                 <% roles.forEach((rol) => { %>
                                                     <option value="<%= rol.nombre_rol %>"><%= rol.nombre_rol %></option> 
                                                 <% }); %> 
@@ -169,7 +173,8 @@
                                                 name="cargo_usuario"
                                                 id="cargo_usuario"
                                                 placeholder="Cargo"
-                                                class="form-control" 
+                                                class="form-control"
+                                                oninput="let p=this.selectionStart;this.value=this.value.toUpperCase();this.setSelectionRange(p, p);" 
                                             >
                                         </div>
                                     </div>
@@ -191,9 +196,9 @@
                                     <div class="form-group row">
                                         <label class="col-sm-3 col-form-label">Linea de Negocio</label>
                                         <div class="col-sm-9">
-                                            <div><label> <input type="checkbox" name="negocio" value="Auto"> Auto</label></div>
-                                            <div><label> <input type="checkbox" name="negocio" value="Patrimonial"> Patrimonial</label></div>
-                                            <div><label> <input type="checkbox" name="negocio" value="Persona"> Persona</label></div>
+                                            <div><label> <input type="checkbox" name="negocio" value="AUTOMÓVIL"> AUTOMÓVIL</label></div>
+                                            <div><label> <input type="checkbox" name="negocio" value="PATRIMONIAL"> PATRIMONIAL</label></div>
+                                            <div><label> <input type="checkbox" name="negocio" value="SALUD"> SALUD</label></div>
                                         </div>
                                     </div>
                                     </br>
